[package]
name = "cdrs_con"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs = { git = "https://github.com/Jasperav/cdrs.git" }
cdrs_helpers_derive = { git = "https://github.com/Jasperav/cdrs-helpers-derive.git" }
uuid = "0.8"
once_cell = "1.5"
dotenv = "0.15"
regex = "1"