[package]
name = "cdrs_orm_util"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Cassandra ORM. Provides compile time checked queries, validates if the correct type is used. Maps tables to Rust structures."
readme = "README.md"
keywords = ["cassandra", "orm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasperav/cdrs_orm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs_con = { path = "../cdrs_con" }
cdrs_query_writer = { path = "../cdrs_query_writer" }
cdrs_to_rust = { path = "../cdrs_to_rust" }
cdrs_db_mirror = { path = "../cdrs_db_mirror" }