[package]
name = "cdrs_query_writer"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.*"
syn = { version = "1.0.*", features = ["extra-traits", "full"] }
quote = "1.0.*"
cdrs_con = { path = "../cdrs_con" }
proc_macro2_helper = "0.2"