[package]
name = "test_derived_equals"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cdrs_con = { path = "../../cdrs_con" }
log = "0.4"
dotenv = "0.15"
env_logger = "0.7"

[dependencies]
cdrs_db_mirror = { path = ".." }
cdrs = { git = "https://github.com/Jasperav/cdrs.git" }
serde_json = "1.*"
rand = "0.7.*"
serde = "1.*"
rand_derive2 = "0.1"
cdrs-tokio-helpers-derive = { git = "https://github.com/Jasperav/cdrs-tokio-helpers-derive.git" }
uuid = "0.8.*"
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
proc_macro2_helper = "0.2"
cdrs-tokio = { git = "https://github.com/Jasperav/cdrs-tokio.git" }