[package]
name = "cdrs_query_example"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cdrs_con = { path = "../../cdrs_con" }

[dependencies]
cdrs_query_example_proc_macro = { path = "./cdrs_query_example_proc_macro" }
cdrs_con = { path = "../../cdrs_con" }
cdrs = { git = "https://github.com/Jasperav/cdrs.git" }
trybuild = "1.0.*"