[package]
name = "custom_derive"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.12"
syn = { version = "1.0.18", features = ["full", "extra-traits"] }
quote = "1.0.4"
cdrs_query_writer = { path = "../../../cdrs_query_writer" }